--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
               فريق التأليف
             </div>
             <div class="col-9 basic-shape enc-details-value" style="border: 1px solid #bf9d3c; padding: 4px;">
-              فريق علمي بإدارة أ. وفاء بنت محسن التركي
+              فريق علمي بإدارة أ. وفاء التركي
             </div>
 
             <div class="col-3 basic-shape gradient-gold enc-details-label" style="padding: 4px;">
